--- a/example_golang_docker/DockerFile
+++ b/example_golang_docker/DockerFile
@@ -2,12 +2,19 @@ FROM golang:1.23
 
 WORKDIR /go/src/ucsdntexample
 
-RUN git clone git@github.com:CAIDA/goucsdnt.git
 
-WORKDIR /go/src/ucsdntexample/goucsdnt
+RUN git clone https://github.com/CAIDA/goucsdnt.git
 
-RUN go mod downlaod
+WORKDIR /go/src/ucsdntexample/goucsdnt/cmd/analyzepcaps3/
 
-RUN go build -o /go/bin/ucsdntexample analyzepcaps3.go
+RUN go mod init
 
+RUN go get github.com/CAIDA/goucsdnt
+
+RUN go mod download all
+RUN go mod tidy
+
+RUN go build -o /go/bin/ucsdntexample 
+
+RUN mkdir /output
 CMD ["/go/bin/ucsdntexample"]
