--- a/example_golang_docker/DockerFile
+++ b/example_golang_docker/DockerFile
@@ -2,7 +2,7 @@ FROM golang:1.23
 
 WORKDIR /go/src/ucsdntexample
 
-
+RUN apt-get update && apt-get install -y parallel
 RUN git clone https://github.com/CAIDA/goucsdnt.git
 
 WORKDIR /go/src/ucsdntexample/goucsdnt/cmd/analyzepcaps3/
